# UDP-RECEIVER

./: CMakeLists.txt  LICENSE  README.md  build.sh
app/inc/: Message.hpp  MessageManager.hpp  MessageProcessor.hpp  RingBuffer.hpp  UDPReceiver.hpp
app/src/: Message.cpp  MessageManager.cpp  MessageProcessor.cpp  UDPReceiver.cpp  main.cpp
app/test/: UdpTransmitter.cpp
